Fix checkbox / let truncate display html

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -64,3 +64,7 @@ input, textarea {
   padding-bottom: 0;
   background-color: $white-bis;
 }
+
+.checkbox {
+  display:inline-flex !important;
+}
